# xrtcserver

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
conf/: general.yaml  signaling_server.yaml
src/: main.cpp  xrtcserver_def.h
src/base/: async_udp_socket.cpp  async_udp_socket.h  conf.cpp  conf.h  event_loop.cpp  event_loop.h  lock_free_queue.h  log.cpp  log.h  network.cpp  network.h  socket.cpp  socket.h  xhead.h
src/ice/: candidate.cpp  candidate.h  ice_agent.cpp  ice_agent.h  ice_connection.cpp  ice_connection.h  ice_connection_info.h  ice_controller.cpp  ice_controller.h  ice_credentials.cpp  ice_credentials.h  ice_def.cpp  ice_def.h  ice_transport_channel.cpp  ice_transport_channel.h  port_allocator.cpp  port_allocator.h  stun.cpp  stun.h  stun_request.cpp  stun_request.h  udp_port.cpp  udp_port.h
src/pc/: codec_info.h  dtls_srtp_transport.cpp  dtls_srtp_transport.h  dtls_transport.cpp  dtls_transport.h  peer_connection.cpp  peer_connection.h  peer_connection_def.h  session_description.cpp  session_description.h  srtp_session.cpp  srtp_session.h  srtp_transport.cpp  srtp_transport.h  stream_params.cpp  stream_params.h  transport_controller.cpp  transport_controller.h
src/server/: rtc_server.cpp  rtc_server.h  rtc_worker.cpp  rtc_worker.h  signaling_server.cpp  signaling_server.h  signaling_worker.cpp  signaling_worker.h  tcp_connection.cpp  tcp_connection.h
src/stream/: pull_stream.cpp  pull_stream.h  push_stream.cpp  push_stream.h  rtc_stream.cpp  rtc_stream.h  rtc_stream_manager.cpp  rtc_stream_manager.h
(+2 files in other folders)
